# opendchub

./: .gitignore  .travis.yml  CLAUDE.md  Dockerfile.test  README.md  acconfig.h  config.h.in~  configure.in  configure~  docker-compose.yml  install.sh  opendchub.service  test_gag.sh  test_integration.pl
.github/workflows/: ci.yml  release.yml
odchsrc/: Makefile  config.h  config.status
odchsrc/src/: Makefile.am  commands.c  fileio.c  main.c  network.c  network.h  perl_utils.c  userlist.c  utils.c  xs_functions.c
opendchub/src/: Makefile  commands.c  fileio.c  fileio.h  main.h
src/: Makefile.am  commands.c  commands.h  fileio.c  fileio.h  json_socket.c  json_socket.h  main.c  main.h  network.c  network.h  perl_utils.c  userlist.c  utils.c  utils.h  xs_functions.c
test/: dc_client.pl  run.sh
