dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(opendchub, 1.0.0)
AM_CONFIG_HEADER(config.h)
AM_SANITY_CHECK
AC_DEFINE(_GNU_SOURCE)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(crypt, crypt)
AC_CHECK_LIB(crypto, crypt)

dnl Check for bcrypt support via crypt_gensalt (libcrypt/libxcrypt)
AC_CHECK_LIB(crypt, crypt_gensalt, [
   AC_DEFINE([HAVE_CRYPT_GENSALT], [], [Has crypt_gensalt for bcrypt support])
   echo "Bcrypt password hashing support is enabled."
], [
   echo "Bcrypt not available (no crypt_gensalt). Using MD5 crypt fallback."
])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(crypt.h fcntl.h malloc.h sys/poll.h sys/select.h sys/time.h)
AC_CHECK_HEADERS(syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_TYPE_MODE_T
AC_TYPE_PID_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname mkdir poll select socket strstr strtoll strtoq)

dnl Check for capabilities
AC_ARG_ENABLE(switch_user,
   AC_HELP_STRING([--enable-switch_user],
   		  [switch user/group if started as root]),
   if test "$enableval" = "yes"; then
      CHECK="yes"
   fi
)

if test "$CHECK" = "yes"; then
   FAIL="false"
   AC_CHECK_LIB(cap, cap_set_proc, [
      LIBS="-lcap $LIBS"
      AC_DEFINE([HAS_CAP_SET_PROC], [], [Has the cap_set_proc function])
      AC_CHECK_HEADERS(sys/capability.h, [], [FAIL="true"])
      AC_CHECK_HEADERS(sys/prctl.h, [], [FAIL="true"])
      AC_CHECK_HEADERS(pwd.h, [], [FAIL="true"])
      AC_CHECK_HEADERS(grp.h, [], [FAIL="true"])
   ], [FAIL="true"])

   if test "$FAIL" = "false"; then
      AC_DEFINE([SWITCH_USER], [], [Switch user if started as root])
      echo "Switch user support is enabled."
   else
      echo "Switch user support is disabled."
   fi
fi

dnl Check for SSL/TLS support
AC_ARG_ENABLE(ssl,
   AC_HELP_STRING([--enable-ssl],
   		  [enable SSL/TLS support for encrypted connections]),
   if test "$enableval" = "yes"; then
      ENABLE_SSL="yes"
   fi
)

if test "$ENABLE_SSL" = "yes"; then
   SSL_FAIL="false"
   AC_CHECK_LIB(ssl, SSL_CTX_new, [
      LIBS="-lssl -lcrypto $LIBS"
      AC_CHECK_HEADERS(openssl/ssl.h openssl/err.h, [], [SSL_FAIL="true"])
   ], [SSL_FAIL="true"], [-lcrypto])

   if test "$SSL_FAIL" = "false"; then
      AC_DEFINE([HAVE_SSL], [], [SSL/TLS support enabled])
      echo "SSL/TLS support is enabled."
   else
      echo "SSL/TLS support is disabled (missing libssl or headers)."
   fi
fi

dnl Check if config directory exists.
if test ! -d $HOME/.opendchub; then
   echo "creating config directory: $HOME/.opendchub"
   mkdir $HOME/.opendchub
   chmod 700 $HOME/.opendchub;
fi

AC_OUTPUT(Makefile src/Makefile)

echo ""
echo "*** Type \"make\" to build opendchub ***"
echo ""
