AM_CFLAGS = -Wall -Wextra

bin_PROGRAMS = opendchub

opendchub_SOURCES =	\
	cJSON.c		\
	cJSON.h		\
	commands.c	\
	commands.h	\
	fileio.c 	\
	fileio.h	\
	json_socket.c	\
	json_socket.h	\
	main.c		\
	main.h		\
	network.c	\
	network.h	\
	userlist.c	\
	userlist.h	\
	utils.c		\
	utils.h
	
opendchub_LDADD =
